added resources, forum, courses and career

--- a/src/html/content.html
+++ b/src/html/content.html
@@ -4,7 +4,7 @@
 <head>
     <!--characterset UTF-8 Watch this: https://youtu.be/MijmeoH9LT4 -->
 
-    <title>MyWebClass.org | Privacy Policy</title>
+    <title>MyWebClass.org | Content</title>
     <meta charset="UTF-8">
 
     <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/style.css">
 
     <!--Basic meta info -->
-    <meta content="My Webclass Homepage | Privacy Policy" name="keywords">
+    <meta content="My Webclass Homepage | Content" name="keywords">
     <meta name="author" content="Allie He, Zach Garcia, Kaan Okul"/>
     <meta name="description" content="A project that creates a hub to help web developers">
 
@@ -42,16 +42,16 @@
                             <a class="nav-link" href="content.html">Content Template</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Resources</a>
+                            <a class="nav-link" href="resources.html">Resources</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Forum</a>
+                            <a class="nav-link" href="forum.html">Forum</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Courses</a>
+                            <a class="nav-link" href="courses.html">Courses</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Career</a>
+                            <a class="nav-link" href="career.html">Career</a>
                         </li>
                     </ul>
                 </div>
@@ -150,16 +150,8 @@
                         </ul>
                     </div>
 
-                    <div class="col-sm-3">
-                        <h1>Share on Social Media</h1>
-                        <ul class="nav">
-                            <li class="nav-item mb-2"><a class="nav-link p-0 text-muted" href="#"><i
-                                    class="bi bi-linkedin me-2"></i></a></li>
-                            <li class="nav-item mb-2"><a class="nav-link p-0 text-muted" href="#"><i
-                                    class="bi bi-twitter me-2"></i></a>
-                            </li>
-                            <li class="nav-item mb-2"><a class="nav-link p-0 text-muted" href="#"><i
-                                    class="bi bi-facebook me-2"></i></a></li>
+                    <div class="col-sm-3 ">
+                        <h5>Tell others about us on your social media!</h5>
                         </ul>
                     </div>
 
