--- a/src/html/story.html
+++ b/src/html/story.html
@@ -43,16 +43,16 @@
                             <a class="nav-link" href="content.html">Content Template</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Resources</a>
+                            <a class="nav-link" href="resources.html">Resources</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Forum</a>
+                            <a class="nav-link" href="forum.html">Forum</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Courses</a>
+                            <a class="nav-link" href="courses.html">Courses</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Career</a>
+                            <a class="nav-link" href="career.html">Career</a>
                         </li>
                     </ul>
                 </div>
@@ -157,15 +157,7 @@
                 </div>
 
                 <div class="col-sm-3 ">
-                    <h1>Share on Social Media</h1>
-                    <ul class="nav">
-                        <li class="nav-item mb-2"><a class="nav-link p-0 text-muted" href="#"><i
-                                class="bi bi-linkedin me-2"></i></a></li>
-                        <li class="nav-item mb-2"><a class="nav-link p-0 text-muted" href="#"><i
-                                class="bi bi-twitter me-2"></i></a>
-                        </li>
-                        <li class="nav-item mb-2"><a class="nav-link p-0 text-muted" href="#"><i
-                                class="bi bi-facebook me-2"></i></a></li>
+                    <h5>Tell others about us on your social media!</h5>
                     </ul>
                 </div>
 
