Updated Cookies Consent

--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
   </div>
   <script>
       var cookieConsent = document.querySelector('.cookie-consent');
-var cookieAccept = document.querySelector('#cookie-accept');
+var cookieAccept = document.querySelector('#consent-button');
 
 if (!localStorage.getItem('cookie-consent')) {
   cookieConsent.classList.add('show');
