--- a/src/content.html
+++ b/src/content.html
@@ -86,8 +86,8 @@
             <main class="col-md-9 ms-sm-auto col-lg-9 px-md-4">
                 <section id="title">
                     <h1 class="fw-bold border-bottom">Article Title</h1>
-                    <div class="text-muted mb-3 ">By Author</a><span class="text-muted me-3"> Last Updated:
-                January 1, 2022</span> <span class="text-muted" id="readingTime">0</span>
+                    <div class="text-muted mb-3 "><a href="#">By Author</a><span class="text-muted me-3"> Last Updated:
+                    January 1, 2022</span> <span class="text-muted" id="readingTime">0</span>
                     </div>
                 </section>
                 <section id="section1">
