--- a/src/html/forum.html
+++ b/src/html/forum.html
@@ -61,7 +61,10 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main class="col-md-9 ms-sm-auto col-lg-9 px-md-4">
+        <section id="title">
+            <h1 class="fw-bold border-bottom">Web Development Resources</h1>
+        </section>
         <div class="container my-5">
 
             <form class="search-form">
