--- a/src/html/resources.html
+++ b/src/html/resources.html
@@ -106,6 +106,7 @@
                     <h2>CSS</h2>
                     <p>
                         <ul>
+                            <li><a href="#">CSS syntax</a></li>
                             <li><a href="#">Internal CSS</a></li>
                             <li><a href="#">External CSS</a></li>
                             <li><a href="#">Repsonive Design</a></li>
