Updated Pirvacy Policy Verbiage

--- a/src/privacy.html
+++ b/src/privacy.html
@@ -71,7 +71,7 @@
             <main class="col-md-9 ms-sm-auto col-lg-9 px-md-4">
 
                 <h1 class="fw-bold border-bottom" id="title">Privacy Policy</h1>
-                <div class="text-muted mb-3 ">By <a href="#">Author Name</a><span class="text-muted me-3"> Last Updated:
+                <div class="text-muted mb-3 ">By <a href="#">Jan Chris Tacbianan, Faran Chaudhry & Rachel Stone</a><span class="text-muted me-3"> Last Updated:
               January 1, 2022</span> <span class="text-muted" id="readingTime">0</span>
                 </div>
                 <section class="row">
@@ -131,14 +131,13 @@
                     <p>You have the right to access, correct, and delete your personal information. You also have the
                         right to object to the processing of your personal information and to withdraw your consent to
                         the processing of your personal information. To exercise these rights, please contact us at
-                        [contact email address].</p>
+                        mywebclass@njit.edu.</p>
                     <h2>Changes to this Privacy Policy</h2>
                     <p>We may update this Privacy Policy from time to time. We will notify you of any changes by posting
                         the new Privacy Policy on this page. We recommend that you review this Privacy Policy
                         periodically for any changes.</p>
                     <h2>Contact us</h2>
-                    <p>If you have any questions about this Privacy Policy, please contact us at [contact email
-                        address].</p>
+                    <p>If you have any questions about this Privacy Policy, please contact us at mywebclass@njit.edu.</p>
 
                 </section>
 
