Fix home page link

--- a/src/content.html
+++ b/src/content.html
@@ -36,7 +36,7 @@
     <header class="fixed-top" role="banner">
         <nav aria-label="Main navigation" class="navbar navbar-expand-lg navbar-dark bg-dark " role="navigation">
             <div class="container">
-                <a class="navbar-brand" href="/">MyWebClass.org</a>
+                <a class="navbar-brand" href="index.html">MyWebClass.org</a>
                 <button aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
                         data-bs-target="#navbarCollapse" data-bs-toggle="collapse" type="button">
                     <span aria-hidden="true" class="navbar-toggler-icon"></span>
@@ -57,7 +57,7 @@
                 <div class="row align-items-center">
                     <div class="col-auto text-start">
                         <ol class="breadcrumb my-0">
-                            <li class="breadcrumb-item"><a href="/">Home</a></li>
+                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                             <li aria-current="page" class="breadcrumb-item active">Content Template</li>
                         </ol>
                     </div>
