--- a/src/courses.html
+++ b/src/courses.html
@@ -4,36 +4,40 @@
 <head>
     <!--characterset UTF-8 Watch this: https://youtu.be/MijmeoH9LT4 -->
 
-    <title>MyWebClass.org | Courses</title>
+    <title>MyWebClass.org | Courses </title>
     <meta charset="UTF-8">
 
-    <meta content="width=device-width, initial-scale=1" name="viewport">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bootstrap-5.0.2-dist/css/bootstrap.css">
     <link rel="stylesheet" href="scss/styles.scss">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/forum.css">
+    <link rel="stylesheet" href="css/courses.css">
 
     <!--Basic meta info -->
-    <meta content="My Webclass Homepage | Courses" name="keywords">
+    <meta name="keywords" content="My Webclass | Forum">
     <meta name="author" content="Allie He, Zach Garcia, Kaan Okul"/>
     <meta name="description" content="A project that creates a hub to help web developers">
 
     <!--OpenGraph meta -->
-    <meta content="" property="og:title"/>
-    <meta content="" property="og:description"/>
-    <meta content="assets/images/logo.png" property="og:image"/>
-    <meta content="" property="og:url"/>
+    <meta property="og:title" content=""/>
+    <meta property="og:description" content=""/>
+    <meta property="og:image" content="assets/images/logo.png"/>
+    <meta property="og:url" content=""/>
+
 </head>
 
-<body>
+<body class="pt-5">
 <div class="container-fluid">
-    <header class="fixed-top" role="banner">
-        <nav aria-label="Main navigation" class="navbar navbar-expand-lg navbar-dark bg-dark " role="navigation">
+    <header role="banner" class="fixed-top">
+        <nav role="navigation" aria-label="Main navigation" class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
                 <a class="navbar-brand" href="index.html">MyWebClass.org</a>
-                <button aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
-                        data-bs-target="#navbarCollapse" data-bs-toggle="collapse" type="button">
-                    <span aria-hidden="true" class="navbar-toggler-icon"></span>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Toggle navigation</span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -57,36 +61,19 @@
                 </div>
             </div>
         </nav>
-
-        <nav aria-label="Breadcrumb" class="py-3 d-none d-md-block">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-auto text-start">
-                        <ol class="breadcrumb my-0">
-                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                            <li aria-current="page" class="breadcrumb-item active">Content Template</li>
-                        </ol>
-                    </div>
-                </div>
-            </div>
-        </nav>
     </header>
+    <main>
+        <section id="title">
+            <h1 class="fw-bold border-bottom">MyWebClass Courses</h1>
+        </section>
+        <div class="container my-5">
 
-    <div class="container">
-        <div class="row">
-            <!-- Table of Contents (TOC) menu with scrollspy -->
-            <nav class="col-md-2 col-lg-2 d-md-block bg-light sidebar collapse position-fixed" id="toc_menu">
-                <div class="position-sticky pt-3">
-                    <h2 class="justify-left">Navigation</h2>
-                    <!-- Javascript builds out the navigation items -->
-                </div>
-            </nav>
+            <form class="search-form">
+                <input type="text" placeholder="Search for a course...">
+                <button type="submit">Search</button>
+              </form>
 
-            <!-- Main content area -->
-            <main class="col-md-9 ms-sm-auto col-lg-9 px-md-4">
-                <section id="title">
-                    <h1 class="fw-bold border-bottom">Web Development Resources</h1>
-                </section>
+              <section>
                 <section id="section1">
                     <h2>HTML</h2>
                     <p>
@@ -115,43 +102,47 @@
                             <li><a href="#">JavaScript Advanced</a></li>
                         </ul>
                     </p>
-            </main>
-
-            <footer class="py-5 container">
-                <div class="row">
-                    <div class="col">
-                        <h1>About Us</h1>
-                        <ul class="nav flex-column">
-                            <li class="nav-item">
-                            <li class="nav-item mb-2"><a class="nav-link p-0 text-muted" href="story.html">Our
-                                Story</a>
-                            </li>
-                            <a aria-current="page" class="nav-link mb-2 p-0 text-muted active" href="privacy.html">Privacy
-                                Policy</a>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div class="col-sm-3 ">
-                        <h5>Tell others about us on your social media!</h5>
-                        </ul>
-                    </div>
-
-
-                    <div class="col-md-5 offset-md-1 mb-3">
-                        <form>
-                            <h1>Subscribe to our newsletter</h1>
-                            <p>Monthly digest of what's new and exciting from us.</p>
-                            <div class="d-flex flex-column flex-sm-row w-100 gap-2">
-                                <label class="visually-hidden" for="newsletter1">Email address</label>
-                                <input class="form-control" id="newsletter1" placeholder="Email address" type="text">
-                                <button class="btn btn-primary" type="button">Subscribe</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </footer>
+                </section>
+            </section>
         </div>
+    </main>
+    <footer class="py-5 container">
+        <div class="row">
+            <div class="col">
+                <h5>About Us</h5>
+                <ul class="nav flex-column">
+                    <li class="nav-item">
+                    <li class="nav-item mb-2"><a href="story.html" class="nav-link p-0 text-muted">Our
+                        Story</a>
+                    </li>
+
+                    <a class="nav-link mb-2 p-0 text-muted active" aria-current="page" href="privacy.html">Privacy
+                        Policy</a>
+                    </li>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="col-sm-3 ">
+                <h5>Tell others about us on your social media!</h5>
+                </ul>
+            </div>
+
+
+            <div class="col-md-5 offset-md-1 mb-3">
+                <form>
+                    <h5>Subscribe to our newsletter</h5>
+                    <p>Monthly digest of what's new and exciting from us.</p>
+                    <div class="d-flex flex-column flex-sm-row w-100 gap-2">
+                        <label for="newsletter1" class="visually-hidden">Email address</label>
+                        <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
+                        <button class="btn btn-primary" type="button">Subscribe</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </footer>
+</div>
 </body>
 
 </html>
