--- a/src/forum.html
+++ b/src/forum.html
@@ -61,9 +61,9 @@
             </div>
         </nav>
     </header>
-    <main class="col-md-9 ms-sm-auto col-lg-9 px-md-4">
+    <main>
         <section id="title">
-            <h1 class="fw-bold border-bottom">Web Development Resources</h1>
+            <h1 class="fw-bold border-bottom">MyWebClass Forum</h1>
         </section>
         <div class="container my-5">
 
