--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 
     <!--Basic meta info -->
     <meta name="keywords" content="My Webclass Homepage">
-    <meta name="author" content="Keith Williams"/>
+    <meta name="author" content="Eric Huang, Kapila Mane, Sarang Patel"/>
     <meta name="description" content="A project to help educators integrate new technoliges into their teaching">
 
     <!--OpenGraph meta -->
@@ -62,27 +62,15 @@
     <main>
         <br>
         <br>
-        <h1><center>Welcome to MyWebClass.org!</center></h1>
+        <h1><center>Welcome to Our Website!!</center></h1>
 
-      <!--  <div class="container my-5">
-            <div class="row p-4 pb-0 pe-lg-0 pt-lg-0 align-items-center rounded-3 border shadow-lg ">
-                <div class="col-lg-7 p-3 p-lg-3 pt-lg-1">
-                    <h1 class="display-6 fw-bold lh-1">Revolutionize your teaching</h1>
-                    <p class="lead">Empower your students with cutting-edge software engineering skills. Join
-                        MyWebClass and discover advanced technologies that will transform your teaching and their
-                        learning journey.</p>
-                    <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-                        <button type="button" class="btn btn-success btn-lg px-4 me-md-2 fw-bold">Start
-                            Here
-                        </button>
-                    </div>
-                </div>
-                <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-                    <img class="rounded-lg-3 img-fluid" src="assets/images/teacher.gif"
-                         alt="a teacher with students" width="720">
-                </div>
-            </div>
-        </div> -->
+GitHub is a powerful platform that provides a wide range of tools and services for developers to collaborate, build, and share software projects. Whether you're a seasoned developer or just starting out, GitHub has something to offer to everyone.
+
+With GitHub, you can easily manage your code repositories, collaborate with other developers, track issues, and much more. You can also use GitHub to host your own website, showcase your portfolio, and even find jobs.
+
+GitHub's user-friendly interface and intuitive workflow make it easy for developers to contribute to open-source projects, collaborate with teams, and share their work with the world. Plus, GitHub integrates with a variety of popular development tools and platforms, making it easy to streamline your workflow and work more efficiently.
+
+Whether you're a developer looking to build your skills, a team looking to collaborate on a project, or a company looking to streamline your development process, GitHub has everything you need to succeed. So why wait? Sign up for GitHub today and start exploring all the amazing features and tools it has to offer!
     </main>
     <footer class="py-5 container">
         <div class="row">
