--- a/src/story.html
+++ b/src/story.html
@@ -4,15 +4,15 @@
 <head>
     <!--characterset UTF-8 Watch this: https://youtu.be/MijmeoH9LT4 -->
 
-    <title>MyWebClass.org | Our Story</title>
+    <title>MyWebClass.org | Creator's Corner</title>
     <meta charset="UTF-8">
 
     <meta content="width=device-width, initial-scale=1" name="viewport">
 
     <!--Basic meta info -->
-    <meta content="My Webclass Homepage | Our Story" name="keywords">
-    <meta content="Keith Williams" name="author"/>
-    <meta content="The story and mission of MyWebClass.org" name="description">
+    <meta content="My Webclass Homepage | Creator's Corner" name="keywords">
+    <meta content="Ahmad Ghazy, Felipe Furtado, Megha Saju" name="author"/>
+    <meta content="Your Hub for All Things Content Creation | Creator's Corner | MyWebClass.org" name="description">
 
     <!--OpenGraph meta -->
     <meta content="" property="og:title"/>
@@ -76,49 +76,47 @@
                 </div>
                     <section class="row">
                             <h2 class="h4 mb-4">Mission</h2>
-                            <p>Our mission is to create a community of people committed to helping students of all ages
-                                and backgrounds succeed in the modern software industry by providing educational
-                                opportunities and a practical, hands-on learning experience.</p>
+                            <p>Our mission is to provide aspiring content creators with the knowledge, tools, and resources 
+                            need to build successful careers un the digital media industry. Through our website, we aim
+                            to educate and inspire our audience, and to foster a community of like-minded individuals
+                            who are passionate about creating and sharing content online. We believe that anyone can
+                            become a content creator, regardless of their background or experience, and we are committed
+                            to helping our audience achieve their goals and realize their full potential.</p>
 
                             <h2 class="h4 mb-4">Values</h2>
                             <ul>
-                                <li><strong>People:</strong> We value the people in our community and believe that every
-                                    student and teacher has the potential to succeed. We strive to create an inclusive
-                                    and supportive environment where everyone feels welcome to learn and grow.
+                                <li><strong>Creativity:</strong> Encouraging and fostering creativity in all forms of content
+                                    creation.
                                 </li>
-                                <li><strong>Learning:</strong> We believe that learning is a lifelong process and that
-                                    everyone has something to teach and something to learn. We are committed to
-                                    providing educational opportunities that help students and teachers gain experience
-                                    with new technologies and learn advanced software engineering concepts.
+                                <li><strong>Inclusivity:</strong> Creating a safe and inclusive space where everyone, regardless
+                                    of background or experience, feels welcome to learn and share. 
                                 </li>
-                                <li><strong>Efficiency:</strong> We recognize that time is a valuable resource, and we
-                                    strive to make the most of it. We aim to provide a practical, hands-on learning
-                                    experience that allows students and teachers to develop the skills they need to
-                                    succeed in the modern software industry quickly.
+                                <li><strong>Collaboration:</strong> Fostering a collaborative community where content creators
+                                    can learn from each other, share ideas, and work together on creative projects.
                                 </li>
-                                <li><strong>Dependability:</strong> We understand the importance of being reliable and
-                                    consistent. We aim to provide a stable and dependable platform for students and
-                                    teachers to learn and collaborate.
+                                <li><strong>Innovation:</strong> Embracing new technologies and approaches to content creation,
+                                    and encouraging content creators to experiment and push boundaries. 
                                 </li>
                             </ul>
-                            <p>Each of these values supports our mission by creating a welcoming and supportive
-                                environment for students and teachers to learn and grow. Our focus on people ensures
-                                that everyone feels included and valued, and our commitment to learning provides
-                                educational opportunities that help students and teachers succeed in the modern software
-                                industry. Our emphasis on efficiency and dependability allows us to provide a practical,
-                                reliable platform that makes the most of everyone's time.</p>
+                            <p> At our content creator website, we are committed to promoting creativity, inclusivity,
+                                authenticity, collaboration, growth, innovation, and sustainability in all aspects of 
+                                digital media. These values are essential to our mission of providing aspiring content
+                                creators with the knowledge, tools, and resources they need to build a successful career
+                                in the digital media industry. We believe that by fostering a community that embraces these
+                                values, we can create a safe, welcoming, and supportivespace where everyone can learn, grow,
+                                and achieve their goals. Whether you are just starting out in the world of content creation
+                                or are looking to take your skills ot the next level, we are here to help you succeed in your
+                                creative endeavors.</p>
 
                             <h2 class="h4 mb-4">Origin</h2>
-                            <p>Mywebclass.org was founded in 2023 by Keith Williams, a University Lecturer at New Jersey
-                                Institute of Technology with over 30 years of experience as a software engineer,
-                                entrepreneur, and 17 years of experience as a university lecturer and in k-12 education.
-                                Keith founded mywebclass.org to help bridge the gap between educators and professionals
-                                in the software industry by creating a community of people committed to helping students
-                                of all ages and backgrounds succeed.</p>
+                            <p>Mywebclass.org was founded in 2023 by Ahmad Ghazy, Felipe Furtado, and Megha Suja, three 
+                                students at the New Jersey Institute of Technology. These three individuals founded
+                                mywebclass.org to help aspiring content creators establish their platform by providing
+                                them with the necessary tools and resources in doing so, thus allowing them to suceed.</p>
 
                             <p>Thank you for your interest in mywebclass.org. Together, we can create a community of
-                                people committed to helping students of all ages and backgrounds succeed in the modern
-                                software industry.</p>
+                                aspiring content creators of all ages and backgrounds succeed in today's digital media
+                                industry.</p>
                         </div>
                     </section>
 
