added padding and closing ul tag

--- a/src/courses.html
+++ b/src/courses.html
@@ -73,7 +73,7 @@
                 <button type="submit">Search</button>
               </form>
 
-              <section>
+              <section class="p-4">
                 <section id="section1">
                     <h2>HTML</h2>
                     <p>
@@ -81,6 +81,7 @@
                             <li><a href="#">HTML Beginner</a></li>
                             <li><a href="#">HTML Intermediate</a></li>
                             <li><a href="#">HTML Advanced</a></li>
+                        </ul>
                     </p>
                 </section>
                 <section id="section2">
