updated webpage graphic

--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-                    <img class="rounded-lg-3 img-fluid" src="assets/images/teacher.gif"
+                    <img class="rounded-lg-3 img-fluid" src="assets/images/teacher.JPG"
                          alt="a teacher with students" width="720">
                 </div>
             </div>
