--- a/src/content.html
+++ b/src/content.html
@@ -11,8 +11,8 @@
 
     <!--Basic meta info -->
     <meta content="My Webclass Homepage | Privacy Policy" name="keywords">
-    <meta content="Keith Williams" name="author"/>
-    <meta content="A project to provide educational resources to web development teachers" name="description">
+    <meta content="Ahmad Ghazy, Felipe Furtado, and Megha Suja" name="author"/>
+    <meta content="Your Hub for All Things Content Creation | Creator's Corner | MyWebClass.org" name="description">
 
     <!--OpenGraph meta -->
     <meta content="" property="og:title"/>
