--- a/src/privacy.html
+++ b/src/privacy.html
@@ -4,15 +4,15 @@
 <head>
     <!--characterset UTF-8 Watch this: https://youtu.be/MijmeoH9LT4 -->
 
-    <title>MyWebClass.org | Our Story</title>
+    <title>MyWebClass.org | Creator's Corner</title>
     <meta charset="UTF-8">
 
     <meta content="width=device-width, initial-scale=1" name="viewport">
 
     <!--Basic meta info -->
-    <meta content="My Webclass Homepage | Our Story" name="keywords">
-    <meta content="Keith Williams" name="author"/>
-    <meta content="The story and mission of MyWebClass.org" name="description">
+    <meta content="My Webclass Homepage | Creator's Corner" name="keywords">
+    <meta content="Ahmad Ghazy, Felipe Furtado, Megha Saju" name="author"/>
+    <meta content="Your Hub for All Things Content Creation | Creator's Corner | MyWebClass.org" name="description">
 
     <!--OpenGraph meta -->
     <meta content="" property="og:title"/>
