written new privacy policy in privacy.html

--- a/src/privacy.html
+++ b/src/privacy.html
@@ -71,7 +71,7 @@
             <main class="col-md-9 ms-sm-auto col-lg-9 px-md-4">
 
                 <h1 class="fw-bold border-bottom" id="title">Privacy Policy</h1>
-                <div class="text-muted mb-3 ">By <a href="#">Author Name</a><span class="text-muted me-3"> Last Updated:
+                <div class="text-muted mb-3 ">By <a href="#">sai vikram and abhishek</a><span class="text-muted me-3"> Last Updated:
               January 1, 2022</span> <span class="text-muted" id="readingTime">0</span>
                 </div>
                 <section class="row">
@@ -106,17 +106,9 @@
                         <li>To comply with legal obligations.</li>
                     </ul>
                     <h2>Google Analytics</h2>
-                    <p>We use Google Analytics to collect information about your use of our website. Google Analytics
-                        collects information such as how often users visit the site, what pages they visit when they do
-                        so, and what other sites they used prior to coming to our website. We use the information we get
-                        from Google Analytics to improve our website and the user experience. Google Analytics collects
-                        only the IP address assigned to you on the date you visit our website, rather than your name or
-                        other identifying information. We do not combine the information collected through the use of
-                        Google Analytics with personally identifiable information. Google Analytics plants a permanent
-                        cookie on your web browser to identify you as a unique user the next time you visit our website.
-                        This cookie cannot be used by anyone other than Google. Google’s ability to use and share
-                        information collected by Google Analytics about your visits to our website is restricted by the
-                        Google Analytics Terms of Use and the Google Privacy Policy.</p>
+                    <p>We collect information about how you use our website with Google Analytics. Google Analytics keeps track of things like how often people visit the site, what pages they look at when they do, and what other sites they were on before they came to ours. We use the data we get from Google Analytics to make our website better and make it easier for people to use. Google Analytics only gets your IP address on the day you visit our website. It doesn't get your name or any other information that could be used to find you. We don't combine the information we get from Google Analytics with information that could be used to find out who you are. Google Analytics puts a permanent cookie on your web browser so that the next time you visit our website, you will be recognized as a unique user.
+                        0
+                        .0Google is the only one who can use this cookie. The Google Analytics Terms of Use and the Google Privacy Policy limit how Google can use and share information about your visits to our website that Google Analytics collects.</p>
                     <h2>Data retention and security</h2>
                     <p>We retain the information we collect for as long as necessary to fulfill the purposes for which
                         it was collected, unless a longer retention period is required by law. We take reasonable
@@ -137,8 +129,7 @@
                         the new Privacy Policy on this page. We recommend that you review this Privacy Policy
                         periodically for any changes.</p>
                     <h2>Contact us</h2>
-                    <p>If you have any questions about this Privacy Policy, please contact us at [contact email
-                        address].</p>
+                    <p>If you have any questions about this Privacy Policy, please contact us at sk3498@njit.edu ap2843@njit.edu.</p>
 
                 </section>
 
